k8s/24-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-clusterip
  namespace: cse644-gitops
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: cse644-assignment-03
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8888
      targetPort: http
